--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint --ext .js,.astro,.ts,.tsx src",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/react": "^1.2.1",
@@ -22,5 +24,12 @@
     "react-dom": "^18.2.0",
     "swup": "^2.0.19",
     "tailwindcss": "^3.2.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.26.0",
+    "eslint-plugin-astro": "^0.20.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.6.0"
   }
 }
