--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@astrojs/react": "^1.2.1",
     "@astrojs/tailwind": "^2.1.1",
+    "@fontsource/convergence": "^4.5.9",
+    "@fontsource/koulen": "^4.5.9",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.5.2",
