--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/image": "^0.10.0",
     "@astrojs/react": "^1.2.1",
     "@astrojs/tailwind": "^2.1.1",
     "@fontsource/convergence": "^4.5.9",
@@ -24,6 +25,7 @@
     "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.31.1",
     "swup": "^2.0.19",
     "tailwindcss": "^3.2.1"
   },
